--- a/kpollo/kpollo/Pass.xaml
+++ b/kpollo/kpollo/Pass.xaml
@@ -7,11 +7,12 @@
         mc:Ignorable="d"
         Title="Pass" Height="290.438" Width="369.323">
     <Grid>
-        <TextBox x:Name="tbnev" HorizontalAlignment="Left" Height="50" Margin="92,53,0,0" TextWrapping="Wrap" Text="Név" VerticalAlignment="Top" Width="141"/>
-        <TextBox x:Name="tbjel" HorizontalAlignment="Left" Height="50" Margin="93,125,0,0" TextWrapping="Wrap" Text="Jelszó" VerticalAlignment="Top" Width="141"/>
-        <Button x:Name="button" Content="Regisztráció" HorizontalAlignment="Left" Height="50" Margin="19,190,0,0" VerticalAlignment="Top" Width="130" Click="button_Click"/>
-        <Button x:Name="button1" Content="Belépés" HorizontalAlignment="Left" Height="50" Margin="185,190,0,0" VerticalAlignment="Top" Width="145" Click="button1_Click"/>
-        <Label x:Name="label" Content="Regisztráció/Belépés" HorizontalAlignment="Left" Height="31" Margin="91,12,0,0" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="tbnev" HorizontalAlignment="Left" Height="50" Margin="17,67,0,0" TextWrapping="Wrap" Text="Név" VerticalAlignment="Top" Width="141"/>
+        <TextBox x:Name="tbjel" HorizontalAlignment="Left" Height="50" Margin="15,134,0,0" TextWrapping="Wrap" Text="Jelszó" VerticalAlignment="Top" Width="141"/>
+        <Button x:Name="button" Content="Regisztráció" HorizontalAlignment="Left" Height="50" Margin="205,31,0,0" VerticalAlignment="Top" Width="130" Click="button_Click"/>
+        <Button x:Name="button1" Content="Belépés" HorizontalAlignment="Left" Height="50" Margin="201,109,0,0" VerticalAlignment="Top" Width="145" Click="button1_Click"/>
+        <Label x:Name="label" Content="Regisztráció/Belépés" HorizontalAlignment="Left" Height="31" Margin="17,14,0,0" VerticalAlignment="Top" Width="143"/>
+        <Button x:Name="button2" Content="Toplista" HorizontalAlignment="Left" Height="45" Margin="203,183,0,0" VerticalAlignment="Top" Width="144"/>
 
     </Grid>
 </Window>
