--- a/kpollo/kpollo/MainWindow.xaml
+++ b/kpollo/kpollo/MainWindow.xaml
@@ -32,7 +32,7 @@
         <TextBlock x:Name="ora" HorizontalAlignment="Left" Height="56" Margin="600,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88" Text="{Binding Sec}"/>
         <Image x:Name="image" HorizontalAlignment="Left" Height="150" VerticalAlignment="Top" Width="185" Source="beka.jpg" Canvas.Left="86" Canvas.Top="300"/>
         <TextBlock x:Name="textBlock" Height="50" Canvas.Left="0" TextWrapping="Wrap" Canvas.Top="500" Width="984" Background="#FFFFA200"/>
-        <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Height="74" VerticalAlignment="Top" Width="161" Canvas.Left="20" Canvas.Top="548"/>
+        <Button x:Name="button1" Content="Mehet" HorizontalAlignment="Left" Height="74" VerticalAlignment="Top" Width="161" Canvas.Left="20" Canvas.Top="548"/>
         <Button x:Name="button" Content="Vége" HorizontalAlignment="Left" Height="66" VerticalAlignment="Top" Width="150" Click="button_Click" Canvas.Left="726" Canvas.Top="552"/>
 
 
