--- a/kpollo/kpollo/Toplista.xaml
+++ b/kpollo/kpollo/Toplista.xaml
@@ -8,7 +8,7 @@
         Title="Toplista" Height="300" Width="300">
     <Grid>
         <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="251" Margin="4,9,0,0" VerticalAlignment="Top" Width="212" />
-        <Button x:Name="Vissza" Content="Button" HorizontalAlignment="Left" Height="79" Margin="229,175,0,0" VerticalAlignment="Top" Width="58" Click="Vissza_Click"/>
+        <Button x:Name="Vissza" Content="Vissza" HorizontalAlignment="Left" Height="79" Margin="229,175,0,0" VerticalAlignment="Top" Width="58" Click="Vissza_Click"/>
 
     </Grid>
 </Window>
