--- a/kpollo/kpollo/MainWindow.xaml
+++ b/kpollo/kpollo/MainWindow.xaml
@@ -6,6 +6,23 @@
         xmlns:local="clr-namespace:kpollo"
         mc:Ignorable="d"
         Title="Game" Height="650" Width="900">
+    <Window.Resources>
+        <Storyboard x:Key="Storyboard1">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Probagomb">
+                <EasingDoubleKeyFrame KeyTime="0" Value="32"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="34"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Probagomb">
+                <EasingDoubleKeyFrame KeyTime="0" Value="0"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:0.8" Value="-598"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Window.Resources>
+    <Window.Triggers>
+        <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+            <BeginStoryboard Storyboard="{StaticResource Storyboard1}"/>
+        </EventTrigger>
+    </Window.Triggers>
     <Canvas x:Name="Cv" KeyDown="Cv_KeyDown" RenderTransformOrigin="0.552,0.577">
         <Canvas.Background>
             <LinearGradientBrush EndPoint="0,4" StartPoint="0,0">
@@ -28,17 +45,26 @@
                 <GradientStop Color="White"/>
                 <GradientStop Color="#1111A700" Offset="0.5"/>
             </LinearGradientBrush>
-            
+
         </Canvas.Background>
-        
+
         <TextBlock x:Name="ora" HorizontalAlignment="Left" Height="56" Margin="600,19,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88" Text="{Binding Sec}"/>
         <Image x:Name="image" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="135" Source="beka.jpg" Canvas.Left="86" Canvas.Top="300"/>
-        <Image x:Name="imageground" HorizontalAlignment="Left" Height="76" VerticalAlignment="Top" Width="480" Source="ground.jpg" Canvas.Left="86" Canvas.Top="300"/>
-        
-       <!--<TextBlock x:Name="textBlock" Height="50" Canvas.Left="0" TextWrapping="Wrap" Canvas.Top="500" Width="984" Background="#FFFFA200"/>-->
-        
-                <Button x:Name="buttonMehet" Content="Mehet" HorizontalAlignment="Left" Height="74" VerticalAlignment="Top" Width="161"  Canvas.Left="20" Canvas.Top="548"/>
-        <Button x:Name="Probagomb" Content = "Proba" HorizontalAlignment="Center" Height="21" VerticalAlignment="Top" Width = "111" Canvas.Left ="21" Canvas.Top="444"/>
+        <Image x:Name="imageground" HorizontalAlignment="Left" Height="76" VerticalAlignment="Top" Width="480" Source="ground.jpg" Canvas.Left="10" Canvas.Top="405"/>
+
+        <!--<TextBlock x:Name="textBlock" Height="50" Canvas.Left="0" TextWrapping="Wrap" Canvas.Top="500" Width="984" Background="#FFFFA200"/>-->
+
+        <Button x:Name="buttonMehet" Content="Mehet" HorizontalAlignment="Left" Height="74" VerticalAlignment="Top" Width="161"  Canvas.Left="20" Canvas.Top="548"/>
+        <Button x:Name="Probagomb" Content = "Proba" Height="21" VerticalAlignment="Top" Width = "111" Canvas.Left ="619" Canvas.Top="300" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
         <Button x:Name="buttonVege" Content="Vége" HorizontalAlignment="Left" Height="66" VerticalAlignment="Top" Width="150" Click="buttonVege_Click" Canvas.Left="726" Canvas.Top="552"/>
 
 
